--- a/bundle/template/templateDetails.xml
+++ b/bundle/template/templateDetails.xml
@@ -12,6 +12,7 @@
 
     <languages>
         <language tag="en-GB">en-GB.tpl_jd_boston.ini</language>
+        <language tag="en-GB">es-ES.tpl_jd_boston.ini</language>
     </languages>
 
     <positions>
